--- a/package.json
+++ b/package.json
@@ -1,27 +1,38 @@
 {
   "name": "jaikrishna-portfolio",
+  "homepage": "https://Jaikrishna19.github.io/jaikrishna-portfolio/",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
+    "@heroicons/react": "^2.2.0",
+    "next": "^15.2.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "next": "15.1.7"
+    "react-icons": "^5.5.0"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@eslint/eslintrc": "^3",
+    "@react-three/drei": "^10.0.2",
+    "@react-three/fiber": "^9.0.4",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
     "eslint": "^9",
     "eslint-config-next": "15.1.7",
-    "@eslint/eslintrc": "^3"
+    "framer-motion": "^12.4.7",
+    "gh-pages": "^6.3.0",
+    "postcss": "^8",
+    "react-intersection-observer": "^9.15.1",
+    "tailwindcss": "^3.4.1",
+    "three": "^0.173.0",
+    "typescript": "^5"
   }
 }
