--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "start": "next start",
     "lint": "next lint",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d dist"
+    "deploy": "npm run build && npm run export && gh-pages -d out",
+    "export": "next export"
   },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
